add optional caching with memcached
