# metadata/views.py
@@ -1,77 +1,117 @@
 """Collection of routes."""
 
 import json
-import locale
+# import locale
 import os
 
 from flask import Blueprint, current_app, jsonify, request
 
 general = Blueprint("general", __name__)
-locale.setlocale(locale.LC_ALL, "sv_SE.utf8")
+# locale.setlocale(locale.LC_ALL, "sv_SE.utf8")
 
 
 @general.route("/")
 def metadata():
     """Return corpus and lexicon meta data as a JSON object."""
-    corpora = read_static_json(current_app.config.get("CORPORA_FILE"))
-    lexicons = read_static_json(current_app.config.get("LEXICONS_FILE"))
-    models = read_static_json(current_app.config.get("MODELS_FILE"))
+    corpora = load_data(current_app.config.get("CORPORA_FILE"))
+    lexicons = load_data(current_app.config.get("LEXICONS_FILE"))
+    models = load_data(current_app.config.get("MODELS_FILE"))
 
     resource = request.args.get("resource")
     if resource:
         return get_single_resource(resource, corpora, lexicons, models)
 
-    metadata = {"corpora": dict_to_list(corpora), "lexicons": dict_to_list(lexicons),
-                "models": dict_to_list(models)}
+    data = {"corpora": dict_to_list(corpora), "lexicons": dict_to_list(lexicons),
+            "models": dict_to_list(models)}
 
     has_description = True if (request.args.get("has-description", "")).lower() == "true" else False
     if has_description:
-        metadata = {
-            "corpora": [c for c in metadata["corpora"] if c["has_description"]],
-            "lexicons": [c for c in metadata["lexicons"] if c["has_description"]],
-            "models": [c for c in metadata["models"] if c["has_description"]]
+        data = {
+            "corpora": [c for c in data["corpora"] if c["has_description"]],
+            "lexicons": [c for c in data["lexicons"] if c["has_description"]],
+            "models": [c for c in data["models"] if c["has_description"]]
         }
 
-    return jsonify(metadata)
+    return jsonify(data)
+
+
+@general.route("/renew-cache")
+def renew_cache():
+    """Flush cache and re-read json files."""
+    try:
+        if not current_app.config.get("NO_CACHE"):
+            mc = current_app.config.get("cache_client")
+            mc.flush_all()
+        load_data(current_app.config.get("CORPORA_FILE"))
+        load_data(current_app.config.get("LEXICONS_FILE"))
+        load_data(current_app.config.get("MODELS_FILE"))
+        load_data(current_app.config.get("RESOURCE_TEXTS_FILE"), prefix="res_desc")
+        success = True
+        error = None
+    except Exception as error:
+        success = False
+    return jsonify({"cache_renewed": success,
+                    "error": error})
 
 
 @general.route("/doc")
 def documentation():
     """Serve API documentation yaml file."""
-    return current_app.send_static_file('apidoc.yaml')
+    return current_app.send_static_file("apidoc.yaml")
 
 
 def get_single_resource(resource_id, corpora, lexicons, models):
     """Get lexicon or corpus from resource dictionaries and add resource text (if available)."""
-    resource_texts = read_static_json(current_app.config.get("RESOURCE_TEXTS_FILE"))
+    resource_texts = load_data(current_app.config.get("RESOURCE_TEXTS_FILE"), prefix="res_desc")
     long_description = resource_texts.get(resource_id, {})
 
+    resource = {}
     if corpora.get(resource_id):
         resource = corpora[resource_id]
-        resource["long_description_sv"] = long_description.get("sv", "")
-        resource["long_description_en"] = long_description.get("en", "")
     elif lexicons.get(resource_id):
         resource = lexicons[resource_id]
-        resource["long_description_sv"] = long_description.get("sv", "")
-        resource["long_description_en"] = long_description.get("en", "")
     elif models.get(resource_id):
         resource = models[resource_id]
+
+    if resource:
         resource["long_description_sv"] = long_description.get("sv", "")
         resource["long_description_en"] = long_description.get("en", "")
-    else:
-        resource = {}
 
     return jsonify(resource)
 
 
+def load_data(jsonfile, prefix=""):
+    """Load data from cache."""
+    if current_app.config.get("NO_CACHE"):
+        return read_static_json(jsonfile)
+    mc = current_app.config.get("cache_client")
+    data = mc.get(add_prefix(jsonfile, prefix))
+    if not data:
+        all_data = read_static_json(jsonfile)
+        mc.set(add_prefix(jsonfile, prefix), list(all_data.keys()))
+        for k, v in all_data.items():
+            mc.set(add_prefix(k, prefix), v)
+    else:
+        all_data = {}
+        for k in data:
+            all_data[k] = mc.get(add_prefix(k, prefix))
+    return all_data
+
+
 def read_static_json(jsonfile):
     """Load json file from static folder and return as object."""
+    print("Reading json", jsonfile)
     file_path = os.path.join(current_app.config.get("STATIC"), jsonfile)
     with open(file_path, "r") as f:
         return json.load(f)
 
+def add_prefix(key, prefix):
+    """Add prefix to key."""
+    if prefix:
+        key = "{}_{}".format(prefix, key)
+    return key
 
-def dict_to_list(input):
+def dict_to_list(input_obj):
     """Convert resource dict into list."""
     # return sorted(input.values(), key=lambda x: locale.strxfrm(x.get("name_sv")))
-    return list(input.values())
+    return list(input_obj.values())
